Se realizaron cambios en las entidades de REgister Se aplico el Mapper en diagnoses, falta pulir detalles, Se reparo el appointmentService y el AppointmentController