@@ -1,6 +1,7 @@
 package Pet.Society.services;
 
 import Pet.Society.models.dto.appointment.AppointmentDTO;
+import Pet.Society.models.dto.appointment.AppointmentResponseDTO;
 import Pet.Society.models.dto.appointment.AppointmentUpdateDTO;
 import Pet.Society.models.dto.client.ClientDTO;
 import Pet.Society.models.dto.pet.AssingmentPetDTO;
@@ -14,17 +15,21 @@ import Pet.Society.models.enums.Status;
 import Pet.Society.models.exceptions.AppointmentDoesntExistException;
 import Pet.Society.models.exceptions.DuplicatedAppointmentException;
 import Pet.Society.models.exceptions.UnavailableAppointmentException;
+import Pet.Society.models.interfaces.Mapper;
 import Pet.Society.repositories.AppointmentRepository;
+import jakarta.transaction.Transactional;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
 import java.util.Random;
+import java.util.stream.Collectors;
 
 @Service
-public class AppointmentService {
+public class AppointmentService implements Mapper<AppointmentDTO,AppointmentEntity> {
 
     private final AppointmentRepository appointmentRepository;
     private final DoctorService doctorService;
@@ -45,11 +50,10 @@ public class AppointmentService {
     //Si ya existe la cita; Excepcion
     //Si existe una cita que se solape con otra; Excepción
 
-        /// FALTA POR TOCAR, ES POSIBLE QUE SE NECESITE UN DTO
-    public AppointmentEntity save (AppointmentDTO appointmentDTO) {
-        DoctorEntity findDoctor = this.doctorService.findById1(appointmentDTO.getDoctor().getId());
+    @Transactional(rollbackOn = DuplicatedAppointmentException.class)
+    public AppointmentDTO save (AppointmentDTO appointmentDTO) {
 
-
+        DoctorEntity findDoctor = this.doctorService.findById1(appointmentDTO.getDoctor());
 
         AppointmentEntity appointment = AppointmentEntity.builder()
                                         .startDate(appointmentDTO.getStartTime())
@@ -59,16 +63,14 @@ public class AppointmentService {
                                         .doctor(findDoctor)
                                         .approved(true)
                                         .build();
-
         if (isOverlapping(appointment)) {
             throw new DuplicatedAppointmentException("The appointment already exists; it has the same hour.");
         }
-        return this.appointmentRepository.save(appointment);
+
+        return toDTO(this.appointmentRepository.save(appointment));
     }
-
-
-    /// FORMA 2
-    public AppointmentEntity bookAppointment(Long idAppointment, AssingmentPetDTO dto) {
+    @Transactional
+    public AppointmentResponseDTO bookAppointment(Long idAppointment, AssingmentPetDTO dto) {
         AppointmentEntity findAppointment = this.appointmentRepository.
                 findById(idAppointment).orElseThrow(() -> new AppointmentDoesntExistException("Appointment not found"));
 
@@ -82,8 +84,16 @@ public class AppointmentService {
         PetEntity findPet = this.petService.findById(dto.getPetId());
 
         findAppointment.setPet(findPet);
+        this.appointmentRepository.save(findAppointment);
 
-        return this.appointmentRepository.save(findAppointment);
+        return AppointmentResponseDTO.builder()
+                .startTime(findAppointment.getStartDate())
+                .startTime(findAppointment.getEndDate())
+                .reason(findAppointment.getReason())
+                .doctorName(findAppointment.getDoctor().getName())
+                .petName(findPet.getName())
+                .aproved(findAppointment.isApproved())
+                .build();
     }
 
     //Confirm if an Appointment doesn't overlap with another Appointment
@@ -99,7 +109,7 @@ public class AppointmentService {
     }
 
     ///WORKS
-    public AppointmentEntity updateAppointment(AppointmentUpdateDTO appointmentUpdateDTO, long id) {
+    public AppointmentDTO updateAppointment(AppointmentUpdateDTO appointmentUpdateDTO, long id) {
         Optional<AppointmentEntity> existingAppointment = this.appointmentRepository.findById(id);
         if (existingAppointment.isEmpty()) {
             throw new AppointmentDoesntExistException("Appointment does not exist");
@@ -128,7 +138,7 @@ public class AppointmentService {
             // appointmentToUpdate.setDiagnoses(diagnoses);
         }
         this.appointmentRepository.save(appointmentToUpdate);
-        return appointmentToUpdate;
+        return toDTO(appointmentToUpdate);
     }
 
     public void cancelAppointment(long id) {
@@ -141,26 +151,53 @@ public class AppointmentService {
         updateAppointment(appointmentUpdateDTO, id);
     }
 
-    public List<AppointmentEntity> getAllAppointmentsByClientId(long id) {
+    public List<AppointmentResponseDTO> getLastAppointmentsByClientId(long id) {
         Optional<ClientDTO> client = Optional.ofNullable(this.clientService.findById(id));
         if (client.isEmpty()) {
             throw new AppointmentDoesntExistException("Client does not exist");
         }
-        return this.appointmentRepository.findAllByPetClientId(id);
+        return  this.appointmentRepository.findAllByPetClientId(id).stream()
+                .filter(appointment -> appointment.getStatus().equals(Status.SUCCESSFULLY)).
+                map(appointmentEntity -> AppointmentResponseDTO.builder()
+                        .startTime(appointmentEntity.getStartDate())
+                        .endTime(appointmentEntity.getEndDate())
+                        .reason(appointmentEntity.getReason())
+                        .aproved(appointmentEntity.isApproved())
+                        .petName(appointmentEntity.getPet().getName())
+                        .doctorName(appointmentEntity.getDoctor().getName())
+                        .build()).collect(Collectors.toList());
     }
 
-    public List<AppointmentEntity> getAllAppointmentsByPetId(long id) {
-        if(!petService.existsPetById(id)){
+    public List<AppointmentResponseDTO> getAllAppointmentsByPetId(long id) {
+      Optional <PetEntity> pet = Optional.ofNullable(this.petService.findById(id));
+        if(pet.isEmpty()){
             throw new AppointmentDoesntExistException("Pet does not exist");
         }
-        return this.appointmentRepository.findAllByPetId(id).stream().limit(10).toList();
+        return this.appointmentRepository.findAllByPetId(id).stream()
+                .filter(appointment -> appointment.getStatus().equals(Status.SUCCESSFULLY)).
+                map(appointmentEntity -> AppointmentResponseDTO.builder()
+                        .startTime(appointmentEntity.getStartDate())
+                        .endTime(appointmentEntity.getEndDate())
+                        .reason(appointmentEntity.getReason())
+                        .aproved(appointmentEntity.isApproved())
+                        .petName(appointmentEntity.getPet().getName())
+                        .doctorName(appointmentEntity.getDoctor().getName())
+                        .build()).collect(Collectors.toList());
     }
 
-    public List<AppointmentEntity> getAllAppointmentsByDoctorId(long id) {
+    public List<AppointmentResponseDTO> getAvailableAppointmentsDoctorForToday(long id) {
         if(!doctorService.doctorExistById(id)){
             throw new AppointmentDoesntExistException("Doctor does not exist");
         }
-        return this.appointmentRepository.findAllByDoctorId(id).stream().limit(10).toList();
+        return this.appointmentRepository.findAllByDoctorId(id).stream() .filter(appointment -> appointment.getStartDate().isAfter(LocalDateTime.now())).
+                map(appointmentEntity -> AppointmentResponseDTO.builder()
+                        .startTime(appointmentEntity.getStartDate())
+                        .endTime(appointmentEntity.getEndDate())
+                        .reason(appointmentEntity.getReason())
+                        .aproved(appointmentEntity.isApproved())
+                        .petName(appointmentEntity.getPet().getName())
+                        .doctorName(appointmentEntity.getDoctor().getName())
+                        .build()).collect(Collectors.toList());
     }
 
     public boolean petHasAppointment(long id) {
@@ -172,7 +209,25 @@ public class AppointmentService {
     }
 
 
+    @Override
+    public AppointmentEntity toEntity(AppointmentDTO dto) {
+        return AppointmentEntity.builder()
+                .startDate(dto.getStartTime())
+                .endDate(dto.getEndTime())
+                .reason(dto.getReason())
+                .doctor(this.doctorService.findById1(dto.getDoctor()))
+                .approved(dto.isAproved())
+                .build();
+    }
 
-
-
+    @Override
+    public AppointmentDTO toDTO(AppointmentEntity entity) {
+        return AppointmentDTO.builder()
+                .startTime(entity.getStartDate())
+                .endTime(entity.getEndDate())
+                .reason(entity.getReason())
+                .doctor(entity.getDoctor().getId())
+                .aproved(entity.isApproved())
+                .build();
+    }
 }
